k8s/4-gwapi/0-gateway.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: gateway
spec:
  gatewayClassName: cilium
  listeners:            #must be distinct
    - name: http
      allowedRoutes:
        namespaces:
          from: All
      port: 80
      protocol: HTTP
