k8s/4-gwapi/2-https.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      allowedRoutes:
        namespaces:
          from: All
      port: 80
      protocol: HTTP
    - name: https
      allowedRoutes:
        namespaces:
          from: All
      port: 443
      protocol: HTTPS
      hostname: pets.devday.cscheer.eu #required by cert-manager
      tls:
        mode: Terminate
        certificateRefs:
          - name: http-gateway-cert
