k8s/4-gwapi/3-https.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:            #must be distinct
    - name: http
      allowedRoutes:
        namespaces:
          from: All
      port: 80
      protocol: HTTP
    - name: https
      allowedRoutes:
        namespaces:
          from: All
      port: 443
      protocol: HTTPS
      hostname: pets.devday.cscheer.eu   #required by cert-manager
      tls:
        mode: Terminate
        certificateRefs:
          - name: http-gateway-cert
