k8s/4-gwapi/0-http.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      allowedRoutes:
        namespaces:
          from: All
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pets-route
  namespace: pets
spec:
  parentRefs:
    - name: http-gateway
      namespace: infra
  hostnames:
  - pets.devday.cscheer.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cat
      backendRefs:
        - name: cats-service
          port: 5678
    - matches:
        - path:
            type: PathPrefix
            value: /dog
          method: GET
      backendRefs:
        - name: dogs-service
          port: 5678
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oldpets-route
  namespace: pets
spec:
  parentRefs:
    - name: http-gateway
      namespace: infra
  hostnames:
    - oldpets.devday.cscheer.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cat
      backendRefs:
        - name: cats-service
          port: 5678
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-pet-age
                value: old
