k8s/4-gwapi/1-http.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pets-route
  namespace: pets
spec:
  parentRefs:
    - name: http-gateway
      namespace: gateway
  hostnames:
    - pets.devday.cscheer.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cat
      backendRefs:
        - name: cats-service
          port: 5678
    - matches:
        - path:
            type: PathPrefix
            value: /dog
          method: GET
      backendRefs:
        - name: dogs-service
          port: 5678

#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: oldpets-route
#  namespace: pets
#spec:
#  parentRefs:
#    - name: http-gateway
#      namespace: gateway
#  hostnames:
#    - oldpets.devday.cscheer.eu
#  rules:
#    - matches:
#        - path:
#            type: PathPrefix
#            value: /cat
#        - headers:                   #OR connected!
#            - name: X-name
#              value: Garfield
#      backendRefs:
#        - name: cats-service
#          port: 5678
#      filters:
#        - type: ResponseHeaderModifier
#          responseHeaderModifier:
#            add:
#              - name: X-pet-age
#                value: old
#            remove:
#              - x-app-name
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: anypets-route
#  namespace: pets
#spec:
#  parentRefs:
#    - name: http-gateway
#      namespace: gateway
#  hostnames:
#    - pets.devday.cscheer.eu
#  rules:
#    - matches:
#      - path:
#          type: PathPrefix
#          value: /any
#      backendRefs:
#      - name: cats-service
#        port: 5678
#        weight: 50
#      - name: dogs-service
#        port: 5678
#        weight: 50
